Worked on CSS a bit and put in some text in the HTML file

--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
 
 </head>
 
-<body>
+<body class="style_sheet.css">
+
+	<h1>
+		EVE Player Data Database
+
+	</h1>
 	
 	<header>
-		<nav></nav>
+		What is the EPDD?
 	</header>
+	
+	<h2>
+		Test
+	</h2>
 	
 	<main>
 		<section class=""></section>
