Lot of new stuff. Implemented some online fonts, created two buttons to link to new log in and sign up pages. Put in some stock images as place holders for some stuff to add to the website. Did a lot of work on the css end so the website's looking a little nicer but still have a long ways to go. Looking to create log in and sign up pages next and researching accounts and how to create / store / validate them.

--- a/index.html
+++ b/index.html
@@ -8,24 +8,63 @@
 </head>
 
 <body class="style_sheet.css">
-
+	<div>
+		<p align="right">
+			<a class="logIn" href="./log_in.html">
+				<span style="color: #FFFFFF; font-size: 20px; font-family: Abel">Log In</span>
+			</a>
+		</p>
+	</div>
+	
 	<h1>
 		EVE Player Data Database
 
 	</h1>
 	
-	<header>
-		What is the EPDD?
+	<header class="bigDisplayBlock">
+		What is E. P. D. D.
+		<p class="para">
+		The EVE Player Data Database is an online tool that allows EVE players to see important data for their in game characters all in one place. This both helps players avoid the unsatisfactory in game display of this data while beating out other similar services by showing all relevant data in one easy to read, easy to use, and easy to understand page.
+		</p>
 	</header>
 	
-	<h2>
-		Test
+	<h2 style="font-family: Blern; font-size: 30px;">
+		Why use it
 	</h2>
 	
 	<main>
-		<section class=""></section>
-		<section class=""></section>
+		<div class="container">
+			<div class = "containerSpace">
+				<img src="images/kisspng-computer-icons-user-usability-user-friendly-5b113ff865ec19.3854698315278571444175.jpg" alt="User_Friendly" width="100px">
+				<p style="font-family: Abel">Test and i ham still testing this stuff a lot and seeing how far this text will go if of the side bla bla bla</p>
+			</div>
+			<div class="containerSpace">
+				<img src="images/download.png" width="100px">
+				<p style="font-family: Abel">
+				Here is the second round of testing for text
+				</p>
+			</div>
+		
+			
+			
+			
+		</div>
+	
+	<div class="smallDisplayBlock">
+	So what are you waiting for <span style="font-family: Abel">?</span>
+		<p>
+			<a class="signIn" href="./sign_up.html">
+				<span style="color: #FFFFFF; font-size: 40px">Sign Up</span>
+			</a>
+		</p>
+		
+	</div>
+	<br>
+	
+		
 	</main>
+	
+	
 	
 </body>
 </html>
